# football_elo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: update-ratings.yml
data/squads/: 2026.csv
docs/: index.html  methodology_appendix.tex
docs/css/: styles.css
docs/data/: history_top20.json  rankings.json  team_flags.json
docs/data/history/: afghanistan.json  aland.json  albania.json  algeria.json  american-samoa.json  andorra.json  angola.json  anguilla.json  antigua-and-barbuda.json  argentina.json  armenia.json  aruba.json  australia.json  austria.json  azerbaijan.json  bahamas.json  bahrain.json  bangladesh.json  barbados.json  belarus.json  belgium.json  belize.json  benin.json  bermuda.json  bhutan.json  bolivia.json  bonaire.json  bosnia-and-herzegovina.json  botswana.json  brazil.json  british-virgin-islands.json  bulgaria.json  burkina-faso.json  burundi.json  cambodia.json  cameroon.json  canada.json  cape-verde.json  catalonia.json  cayman-islands.json  (+206 more)
docs/data/men/: historical_rankings.json  history_top20.json  rankings.json  squads2026.json  (+1 more)
docs/js/: app.js  bracket.js  charts.js  compare.js  data.js  methodology.js  rankings.js  team.js  third_place_allocation.js  utils.js  worldcup.js
src/football_elo/: __main__.py  backtest.py  data.py  espn_override.py  pipeline.py  squad_scrape.py  squad_strength.py  third_place_allocation.py  web_export.py  worldcup.py
tests/: test_bracket_structure.py  test_collect_results.py  test_espn_override.py  test_squad_ratings.py  test_third_place_allocation.py  test_worldcup_tiebreak.py
(+601 files in other folders)
