[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "football-elo"
version = "0.1.0"
description = "Elo ratings for women's international football teams"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "requests>=2.28",
    "matplotlib>=3.7",
    "statsmodels>=0.14",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
football-elo = "football_elo.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
